@@ -7,6 +7,7 @@ from bzrlib.errors import NoSuchFile
 from bzrlib.inventory import InventoryFile, Inventory
 from bzrlib.workingtree import WorkingTree
 
+
 class TestSmartAdd(TestCaseWithTransport):
 
     def test_add_dot_from_root(self):
@@ -15,7 +16,6 @@ class TestSmartAdd(TestCaseWithTransport):
         paths = ("original/", "original/file1", "original/file2")
         self.build_tree(paths)
         wt = self.make_branch_and_tree('.')
-        branch = wt.branch
         smart_add_tree(wt, (u".",))
         for path in paths:
             self.assertNotEqual(wt.path2id(path), None)
@@ -26,7 +26,6 @@ class TestSmartAdd(TestCaseWithTransport):
         paths = ("original/", "original/file1", "original/file2")
         self.build_tree(paths)
         wt = self.make_branch_and_tree('.')
-        branch = wt.branch
         os.chdir("original")
         smart_add_tree(wt, (u".",))
         for path in paths:
@@ -40,7 +39,6 @@ class TestSmartAdd(TestCaseWithTransport):
                         "branch/original/file2")
         self.build_tree(branch_paths)
         wt = self.make_branch_and_tree('branch')
-        branch = wt.branch
         smart_add_tree(wt, ("branch",))
         for path in paths:
             self.assertNotEqual(wt.path2id(path), None)
@@ -56,7 +54,6 @@ class TestSmartAdd(TestCaseWithTransport):
         
         self.build_tree(build_paths)
         wt = self.make_branch_and_tree('.')
-        branch = wt.branch
         child_tree = self.make_branch_and_tree('original/child')
         smart_add_tree(wt, (".",))
         for path in paths:
@@ -103,7 +100,6 @@ class TestSmartAdd(TestCaseWithTransport):
         from bzrlib.commands import run_bzr
         eq = self.assertEqual
         wt = self.make_branch_and_tree('.')
-        branch = wt.branch
         self.build_tree(['inertiatic/', 'inertiatic/esp'])
         eq(list(wt.unknowns()), ['inertiatic'])
         self.capture('add --dry-run .')
@@ -113,14 +109,12 @@ class TestSmartAdd(TestCaseWithTransport):
         """Test smart-adding a file that does not exist."""
         from bzrlib.add import smart_add
         wt = self.make_branch_and_tree('.')
-        branch = wt.branch
         self.assertRaises(NoSuchFile, smart_add_tree, wt, 'non-existant-file')
 
     def test_returns_and_ignores(self):
         """Correctly returns added/ignored files"""
         from bzrlib.commands import run_bzr
         wt = self.make_branch_and_tree('.')
-        branch = wt.branch
         # no files should be ignored by default, so we need to create
         # an ignore rule - we create one for the pyc files, which means
         # CVS should not be ignored.
@@ -142,18 +136,15 @@ class TestSmartAddTree(TestCaseWithTransport):
         paths = ("original/", "original/file1", "original/file2")
         self.build_tree(paths)
         wt = self.make_branch_and_tree('.')
-        branch = wt.branch
         smart_add_tree(wt, (u".",))
         for path in paths:
             self.assertNotEqual(wt.path2id(path), None)
 
     def test_add_dot_from_subdir(self):
         """Test adding . from a subdir of the tree.""" 
-        from bzrlib.add import smart_add_tree
         paths = ("original/", "original/file1", "original/file2")
         self.build_tree(paths)
         wt = self.make_branch_and_tree('.')
-        branch = wt.branch
         os.chdir("original")
         smart_add_tree(wt, (u".",))
         for path in paths:
@@ -161,20 +152,17 @@ class TestSmartAddTree(TestCaseWithTransport):
 
     def test_add_tree_from_above_tree(self):
         """Test adding a tree from above the tree.""" 
-        from bzrlib.add import smart_add_tree
         paths = ("original/", "original/file1", "original/file2")
         branch_paths = ("branch/", "branch/original/", "branch/original/file1",
                         "branch/original/file2")
         self.build_tree(branch_paths)
         tree = self.make_branch_and_tree('branch')
-        branch = tree.branch
         smart_add_tree(tree, ("branch",))
         for path in paths:
             self.assertNotEqual(tree.path2id(path), None)
 
     def test_add_above_tree_preserves_tree(self):
         """Test nested trees are not affect by an add above them."""
-        from bzrlib.add import smart_add_tree
         paths = ("original/", "original/file1", "original/file2")
         child_paths = ("path")
         full_child_paths = ("original/child", "original/child/path")
@@ -182,7 +170,6 @@ class TestSmartAddTree(TestCaseWithTransport):
                        "original/child/", "original/child/path")
         self.build_tree(build_paths)
         tree = self.make_branch_and_tree('.')
-        branch = tree.branch
         child_tree = self.make_branch_and_tree("original/child")
         smart_add_tree(tree, (u".",))
         for path in paths:
@@ -196,14 +183,33 @@ class TestSmartAddTree(TestCaseWithTransport):
 
     def test_add_paths(self):
         """Test smart-adding a list of paths."""
-        from bzrlib.add import smart_add_tree
         paths = ("file1", "file2")
         self.build_tree(paths)
         wt = self.make_branch_and_tree('.')
-        branch = wt.branch
         smart_add_tree(wt, paths)
         for path in paths:
             self.assertNotEqual(wt.path2id(path), None)
+
+    def test_add_multiple_dirs(self):
+        """Test smart adding multiple directories at once."""
+        added_paths = ['file1', 'file2',
+                       'dir1/', 'dir1/file3',
+                       'dir1/subdir2/', 'dir1/subdir2/file4',
+                       'dir2/', 'dir2/file5',
+                      ]
+        not_added = ['file6', 'dir3/', 'dir3/file7', 'dir3/file8']
+        self.build_tree(added_paths)
+        self.build_tree(not_added)
+
+        wt = self.make_branch_and_tree('.')
+        smart_add_tree(wt, ['file1', 'file2', 'dir1', 'dir2'])
+
+        for path in added_paths:
+            self.assertNotEqual(None, wt.path2id(path.rstrip('/')),
+                    'Failed to add path: %s' % (path,))
+        for path in not_added:
+            self.assertEqual(None, wt.path2id(path.rstrip('/')),
+                    'Accidentally added path: %s' % (path,))
 
 
 class TestAddActions(TestCase):
