@@ -113,6 +113,9 @@ IN DEVELOPMENT
     * File-ids containing single- or double-quotes are handled correctly by
       push.  (#52227, Aaron Bentley)
 
+    * smart-add recurses through all supplied directories 
+      (John Arbash Meinel, #52578)
+
   INTERNALS:
 
     * Combine the ignore rules into a single regex rather than looping over
